fixed many things, added secrets and authentication
