# routes/authors.js
@@ -3,7 +3,8 @@ const router = express.Router();
 
 
 const authorsController = require('../controllers/authors');
-const validation = require('../middleware/validate');
+// const validation = require('../middleware/validate');
+const { isAuthenticated } = require('../middleware/validate');
 
 //get all contacts documents
 router.get('/', authorsController.getAll);
@@ -12,13 +13,13 @@ router.get('/', authorsController.getAll);
 router.get('/:id', authorsController.getSingle);
 
 //Create a POST route to create a new contact.
-router.post('/', validation.saveAuthor, authorsController.createAuthor);
+router.post('/', isAuthenticated, authorsController.createAuthor);
 
 //Create a PUT route to update a contact
-router.put('/:id', validation.saveAuthor, authorsController.updateAuthor);
+router.put('/:id', isAuthenticated, authorsController.updateAuthor);
 
 //Create a DELETE route to delete a contact
-router.delete('/:id', validation.saveAuthor, authorsController.deleteAuthor);
+router.delete('/:id', isAuthenticated, authorsController.deleteAuthor);
 
 //export the router
 module.exports = router;
