# routes/books.js
@@ -3,7 +3,8 @@ const router = express.Router();
 
 
 const booksController = require('../controllers/books');
-const validation = require('../middleware/validate');
+// const validation = require('../middleware/validate');
+const { isAuthenticated } = require('../middleware/validate');
 
 //get all books documents
 router.get('/', booksController.getAll);
@@ -12,13 +13,13 @@ router.get('/', booksController.getAll);
 router.get('/:id', booksController.getSingle);
 
 //Create a POST route to create a new book.
-router.post('/', validation.saveBook, booksController.createBook);
+router.post('/', isAuthenticated, booksController.createBook);
 
 //Create a PUT route to update a book
-router.put('/:id', validation.saveBook, booksController.updateBook);
+router.put('/:id', isAuthenticated, booksController.updateBook);
 
 //Create a DELETE route to delete a book
-router.delete('/:id', validation.saveBook, booksController.deleteBook);
+router.delete('/:id', isAuthenticated, booksController.deleteBook);
 
 //export the router
 module.exports = router;
